# arde

./: .gitignore  Cargo.toml  README.md  justfile
benches/: bench_sel.sel  query_bench.rs
site/: .gitignore  Cargo.toml  index.html  justfile
site/src/: main.rs
src/: lib.rs  library.rs  parser.rs  runtime.rs  storage.rs
src/parser/: v1.rs  v2.rs
src/runtime/: compiler.rs
tests/: eval_tests.rs  parser_tests.rs
tests/eval/: alternatives_async.tdt  basic.tdt  basic_async.tdt  basic_sync.tdt  damn.tdt  damn2_async.tdt  damn_async.tdt  flip.tdt  flip_async.tdt  flip_constant.tdt  flip_constant_async.tdt  flip_constant_sync.tdt  flip_sync.tdt  invalid_task.tdt  match_constant.tdt  match_constant_async.tdt  match_constant_sync.tdt  path.tdt  path_async.tdt  simple_cycle.tdt  simple_cycle_async.tdt  skip.tdt  skip_async.tdt  skip_sync.tdt  std_lib_test_async.tdt  std_lib_test_sync.tdt  stdlib_prove_me_false_async.tdt  task1.tdt  task1_async.tdt  task1_sync.tdt  task2.tdt  task2_async.tdt  task2_sync.tdt  task3.tdt  task3_async.tdt  task3_sync.tdt  task_flip.tdt  task_flip_async.tdt  task_flip_sync.tdt  transitive_neg_async.tdt  (+2 more)
tests/parser/: fact_parse.tdt  goal_parse.tdt  rule_parse.tdt
tree-sitter-datalog-arde/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-datalog-arde/bindings/node/: binding.cc  index.js
tree-sitter-datalog-arde/bindings/rust/: lib.rs
tree-sitter-datalog-arde/queries/: highlights.scm
tree-sitter-datalog-arde/src/: grammar.json  node-types.json  parser.c
tree-sitter-datalog-arde/test/highlight/: test.rule
