[package]
name = "arde"
version = "0.1.7"
edition = "2021"
description = "Another Rust Datalog Engine"
license = "Unlicense"
documentation = "https://docs.rs/arde"
repository = "https://github.com/Jengamon/arde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "query_bench"
harness = false

[dependencies]
async-recursion = { version = "1.0.4", optional = true }
futures = { version = "0.3.28", optional = true }
itertools = "0.10.5"
nom = "7.1.3"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.2", features = ["macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }

[features]
default = []
async = ["dep:async-recursion", "dep:futures"]
serde_internal = ["dep:serde", "uuid/serde"]
web = ["dep:wasm-bindgen", "serde_internal", "dep:serde-wasm-bindgen"]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
datadriven = "0.8.0"
serde_json = "1.0"
arde = { path = ".", features = ["async", "serde_internal"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }

[workspace]
resolver = "2"
members = ["site", "."]
