[package]
name = "arde"
version = "0.2.0"
edition = "2021"
description = "Another Rust Datalog Engine"
license = "Unlicense"
documentation = "https://docs.rs/arde"
repository = "https://github.com/Jengamon/arde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "query_bench"
harness = false

[[test]]
name = "eval_tests"
harness = false

[[test]]
name = "parser_tests"
harness = false

[dependencies]
futures = { version = "0.3.28", optional = true }
itertools = "0.10.5"
nom = "7.1.3"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.2", features = ["macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"], optional = true }
flume = { version = "0.11.0", optional = true }
winnow = "0.5.15"

[features]
default = []
async = ["dep:futures", "dep:flume"]
serde_internal = ["dep:serde", "uuid/serde"]

[dev-dependencies]
criterion = { version = "0.5.0", features = ["async_tokio", "html_reports"] }
serde_json = "1.0"
arde = { path = ".", features = ["async", "serde_internal"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
datatest-stable = "0.1.3"
similar = "2.2.1"

[workspace]
resolver = "2"
members = ["site", "."]
